# homeconnect_local_hass

./: .pre-commit-config.yaml  LICENSE  README.md  hacs.json  pyproject.toml  quality_scale.yaml  ruff.toml
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: lint.yaml  pull_request.yaml  push.yaml  test.yaml  validate.yaml
custom_components/homeconnect_ws/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  diagnostics.py  entity.py  entity_description.py  fan.py  helpers.py  icons.json  light.py  manifest.json  number.py  select.py  sensor.py  services.yaml  switch.py
custom_components/homeconnect_ws/entity_descriptions/: __init__.py  common.py  consumer_products.py  cooking.py  descriptions_definitions.py  dishcare.py  laundry_care.py  refrigeration.py
custom_components/homeconnect_ws/translations/: de.json  en.json  it.json  nl.json  no.json  ru.json
script/: setup.sh
tests/: __init__.py  conftest.py  const.py  ruff.toml  test_binary_sensor.py  test_button.py  test_config_flow.py  test_entity_descriptions.py  test_fan.py  test_helpers.py  test_init.py  test_light.py  test_number.py  test_reauth_flow.py  test_select.py  test_sensor.py  test_switch.py  test_zeroconf.py
